# qcontrol

./: LICENSE  README.md  pyproject.toml
dev/: cyclicity_boost.ipynb  dd_tester.ipynb  fast_init.ipynb  init_scheme_deprecated.ipynb  jaynes_cumming_fwm.ipynb  noise.ipynb  thermal_cooling.ipynb
src/qcontrol/: __init__.py  qubit.py  tools.py
