[project]
name = "qcontrol"
version = "0.0.0"
description = "qcontrol - A quantum control package for dd simulations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["simulation", "optimization", "science", "engineering", "physics"]

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
  {name = "Helaman Flores", email = "helaman.flores591@gmail.com" }
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  {name = "Helaman Flores", email = "helaman.flores591@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy >= 1.19.5"
]

[project.optional-dependencies]
# doc = [
#   "jupyter-book ~= 0.13.2",
#   "matplotlib >= 3.7.1",
#   # "numpydoc == 1.6.0",
#   "jsonschema <= 4.17.3",
#   "referencing <= 0.8.11",
# ]
test = [
  "pytest", 
  "coverage",
]

[project.urls]
# "Homepage" = "https://github.com/Sephiram591/qubit-control"
# "Documentation" = "https://github.com/Sephiram591/qubit-control"
# "Source" = "https://github.com/Sephiram591/qubit-control"
# "Bug Reports" = "https://github.com/Sephiram591/qubit-control"
# "Research Group" = "https://camacholab.byu.edu/"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["qcontrol"]
namespaces = false

# [project.scripts]
# simphony = "simphony.cli:app"

# [tool.pytest.ini_options]
# minversion = "6.0"
# testpaths = ["tests"]
# console_output_style = "progress"
# filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["matplotlib", "numpy", "packaging", "pytest", "scipy"]
known_first_party = ["qcontrol"]

[build-system]
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"